force-app/main/default/objects/Pricebook2/fields/Channel_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Channel_Pricing__c</fullName>
    <label>Channel Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Pricing</valueSetName>
    </valueSet>
</CustomField>