force-app/main/default/objects/Pricebook2/fields/Channel_Pricing_Currency__c.field-meta.xml
<CustomField>
    <fullName>Channel_Pricing_Currency__c</fullName>
    <label>Channel Pricing Currency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>