force-app/main/default/objects/Pricebook2/fields/Indirect__c.field-meta.xml
<CustomField>
    <fullName>Indirect__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect</label>
    <type>Checkbox</type>
</CustomField>