force-app/main/default/objects/Pricebook2/fields/sfdcid__c.field-meta.xml
<CustomField>
    <fullName>sfdcid__c</fullName>
    <formula>Casesafeid(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>sfdcid</label>
    <type>Text</type>
</CustomField>